# oca-rust

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: oca-ast.yml  oca-bundle.yml  oca-dag.yml  oca-file.yml  oca-store.yml  overlay-file.yml  wasm.yml
oca/: Cargo.toml
oca-ast/: Cargo.toml  README.md
oca-ast/src/: errors.rs  lib.rs  validator.rs
oca-ast/src/ast/: attributes.rs  mod.rs
oca-ast/src/utils/: mod.rs
oca-bundle/: Cargo.toml  README.md
oca-bundle/src/: build.rs  controller.rs  lib.rs
oca-bundle/src/state/: attribute.rs  entries.rs  entry_codes.rs  mod.rs  oca.rs  oca_bundle.rs  validator.rs
oca-bundle/src/state/oca/: capture_base.rs  overlay.rs
oca-bundle/src/state/oca/overlay/: attribute_mapping.rs  entry.rs  entry_code_mapping.rs  label.rs  meta.rs  sensitive.rs  standard.rs
oca-bundle/src/state/oca_bundle/: capture_base.rs  overlay.rs
oca-bundle/tests/: create_oca_test.rs
oca-dag/: Cargo.toml  README.md
oca-dag/src/: lib.rs
oca-dag/src/versioning/: bundle.rs  ocafile.rs
oca-dag/tests/: test.rs
oca-file/: Cargo.toml  README.md
oca-file/src/: ocafile.pest
oca-file/src/ocafile/: error.rs  mod.rs
oca-file/src/ocafile/instructions/: add.rs  from.rs  helpers.rs  remove.rs
oca-store/: Cargo.toml  README.md  release.toml
oca-store/src/: data_storage.rs  lib.rs  local_references.rs
oca-store/src/facade/: build.rs  bundle.rs  explore.rs  fetch.rs
oca-store/src/repositories/: oca_bundle_cache_repo.rs  oca_bundle_fts_repo.rs
oca/src/: data_storage.rs  lib.rs  local_references.rs
oca/src/facade/: build.rs  bundle.rs  explore.rs  fetch.rs
oca/src/repositories/: capture_base_cache_repo.rs  oca_bundle_cache_repo.rs
overlay-file/: Cargo.toml  README.md
overlay-file/core_overlays/: semantic.overlayfile
overlay-file/src/: error.rs  lib.rs  overlay.pest  overlay_registry.rs  validator.rs
overlay-file/test_overlays/: test.overlayfile
semantics/oca-ast/: Cargo.toml  ast-example.json
semantics/oca-ast/src/: validator.rs
semantics/oca-ast/src/ast/: mod.rs
semantics/oca-bundle/: Cargo.toml  oca.json
semantics/oca-bundle/src/: build.rs  controller.rs
semantics/oca-bundle/src/state/: attribute.rs  oca.rs  validator.rs
semantics/oca-bundle/src/state/oca/: capture_base.rs  overlay.rs
semantics/oca-bundle/src/state/oca/overlay/: attribute_mapping.rs  entry.rs  entry_code_mapping.rs  label.rs  link.rs  meta.rs  standard.rs
semantics/oca-bundle/tests/: create_oca_test.rs
semantics/oca-dag/: Cargo.toml
semantics/oca-dag/src/: lib.rs
semantics/oca-dag/src/versioning/: bundle.rs  ocafile.rs
semantics/oca-dag/tests/: test.rs
semantics/oca-file/: Cargo.toml
semantics/oca-file/src/: ocafile.pest
semantics/oca-file/src/ocafile/: error.rs  mod.rs
semantics/oca-file/src/ocafile/instructions/: add.rs  helpers.rs  remove.rs
tests/: Cargo.toml  build_from_ocafile.rs
transformation/ast/: Cargo.toml
transformation/ast/src/: validator.rs
transformation/oca-file/: Cargo.toml
transformation/oca-file/src/ocafile/instructions/: link.rs  rename.rs
transformation/transformation-file/: Cargo.toml
transformation/transformation-file/src/state/: mod.rs
