[package]
name = "oca-ast"
description = "Library for handling Abstract Syntax Tree of OCA bundle"
version = "2.0.0-rc.5"
license = "EUPL-1.2"
edition = "2024"
authors = [ "Human Colossus Community <contact@humancolossus.org>" ]
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lib]
name = "oca_ast"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11.8"
indexmap = { version = "2.12.0", features = ["serde"] }
log = "0.4.0"
recursion = "0.5.1"
regex = "1.11"
said = { version = "0.5.2" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.17"
wasm-bindgen = { version = "0.2.89" }
overlay-file = { path = "../overlay-file", version = "1.0.0-rc.6" }
isolang = "2.4.0"

[package.metadata.release]
tag-name = "{{crate_name}}-v{{version}}"
pre-release-commit-message="chore({{crate_name}}): release {{version}} version"
