[package]
name = "oca-bundle"
description = "Rust implementation of Overlays Capture Architecture bundle"
version = "2.0.0-rc.5"
license = "EUPL-1.2"
edition = "2024"
authors = [ "Human Colossus Community <contact@humancolossus.org>" ]
readme = "README.md"
include = ["src/**/*", "config/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_bundle"
path = "src/lib.rs"

[dependencies]
cascade = "1.0.1"
convert_case = "0.9.0"
dyn-clonable = "0.9.0"
erased-serde = "0.4.9"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
indexmap = { version = "2.12.0", features = ["serde"]}
isolang = { version = "2.3.0", features = ["serde"] }
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
oca-ast = { version = "2.0.0-rc.3" }
overlay-file = { version = "1.0.0-rc.3" }
oca-file = { version = "2.0.0-rc.4" }
paste = "1.0.11"
piccolo = "0.3.3"
regex = "1.5.4"
said = { version = "0.5.2"}
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2.0.17"
urn = "0.7.0"
wasm-bindgen = { version = "0.2.89" }
once_cell = "1.21.3"
log = "0.4.0"
env_logger  = "0.11.8"

[dev-dependencies]
maplit = "1.0.2"

[package.metadata.release]
tag-name = "{{crate_name}}-v{{version}}"
pre-release-commit-message="chore({{crate_name}}): release {{version}} version"
