[package]
name = "oca-dag"
version = "2.0.0-rc.2"
edition = "2024"
authors = [ "Human Colossus Community <contact@humancolossus.org>" ]
license = "EUPL-1.2"
readme = "README.md"
description = "Rust implementation of OCA DAG"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_dag"
path = "src/lib.rs"

[dependencies]
dyn-clonable = "0.9.0"
indexmap = { version = "2.12.0", features = ["serde"] }
isolang = { version = "2.3.0", features = ["serde"] }
oca-ast = { version = "2.0.0-rc.2" }
oca-bundle = { version = "2.0.0-rc.3", path = "../oca-bundle" }
overlay-file = { version = "1.0.0-rc.2" }
said = { version = "0.5.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"

[package.metadata.release]
tag-name = "{{crate_name}}-v{{version}}"
pre-release-commit-message="chore({{crate_name}}): release {{version}} version"
