[package]
name = "oca-file"
version = "2.0.0-rc.6"
edition = "2024"
authors = [ "Human Colossus Community <contact@humancolossus.org>" ]
license = "EUPL-1.2"
readme = "README.md"
description = "Rust implementation of OCAFile"

[lib]
name = "oca_file"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
convert_case = "0.10.0"
pest = "2.5.1"
pest_derive = "2.5.1"
pretty_assertions = "1.3.0"
thiserror = "2.0.17"
said = { version = "0.5.2" }
log = "0.4.20"
env_logger = "0.11.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.12.0", features = ["serde"]}
recursion = "0.5.1"
oca-ast = { path = "../oca-ast/", version = "2.0.0-rc.5" }
overlay-file = { path = "../overlay-file", version = "1.0.0-rc.6" }

[package.metadata.release]
tag-name = "{{crate_name}}-v{{version}}"
pre-release-commit-message="chore({{crate_name}}): release {{version}} version"
