[package]
name = "oca-store"
description = "Simple OCA object storage"
version = "2.0.0-rc2"
license = "EUPL-1.2"
edition = "2021"
authors = ["Human Colossus Community <contact@humancolossus.org>"]
readme = "README.md"
include = ["src/**/*", "README.md"]

[lib]
name = "oca_store"
path = "src/lib.rs"

[features]
local-references = []

[dependencies]
dyn-clonable = "0.9.0"
isolang = "2.3.0"
oca-ast = { version = "2.0.0-rc2", path = "../oca-ast" }
oca-bundle = { version = "2.0.0-rc2", path = "../oca-bundle" }
oca-dag = { version = "2.0.0-rc2", path = "../oca-dag" }
oca-file = { version = "2.0.0-rc2", path = "../oca-file" }
overlay-file = { version = "1.0.0-rc1", path = "../overlay-file/" }
transformation-file = { version = "2.0.0-rc2", path = "../transformation/transformation-file" }
regex = "1.9.5"
rusqlite = "0.29.0"
said = { version = "0.4.1", path = "../../cesrox/said/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
thiserror = "1.0.49"
log = "0.4.20"
