[package]
name = "tests-integration"
version = "2.0.0-rc2"
edition = "2021"
publish = false

[dev-dependencies]
oca-store = {path = "../oca-store", features = ["local-references"]}
overlay-file = "1.0.0-rc.2"
env_logger = "0.11.8"

[[test]]
name = "build_from_ocafile"
path = "build_from_ocafile.rs"
